fix: :ambulance: z-INDEX!!
En este commit de emergencia corrigo el problema de haber mandado el main-aside a z-index-1000 que no permitia que interactuaras con la page.

--- a/star_bonks/style_star_bonks.css
+++ b/star_bonks/style_star_bonks.css
@@ -366,7 +366,7 @@ header a {
   height: 100%;
   flex-direction: column;
   overflow: hidden;
-  z-index: -1000;
+  z-index: 0;
 }
 
 /* FORM =============== Starts ===============*/
